<resources>
    <string name="app_name">Mis Primeros Auxilitos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Juegos</string>
    <string name="title_notifications">Ajustes</string>

    <string name="title_profile">Ajustes</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="txt_recordar">Recuérdame</string>
    <string name="iniciar_sesion">iniciar sesión</string>
    <string name="txt_cuenta_NULL">¿No tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="txt_olvidar_password">He olvidado mi contraseña 😢😢😢</string>
    <string name="copyryght">Copyryght © 2023</string>
    <string name="title">Mis primeros auxilitos</string>
    <string name="registro">Registro</string>
    <string name="name">Nombre</string>
    <string name="title_genero">Escoge tu genero</string>
    <string name="txt_masculino">Masculino</string>
    <string name="txt_femenino">Femenino</string>
    <string name="otro">Otro</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="password">Contraseña</string>
    <string name="password_confirm">Confirmar contraseña</string>
    <string name="terminos">Acepto los terminos de servicio y politica de privacidad</string>
    <string name="registrarse">Registrarse</string>
    <string name="regresar">Regresar</string>
    <string name="perfil">Perfil</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="descripcion">Descripción</string>
    <string name="genero">Genero</string>
    <string name="fecha_de_n_nacimiento">Fecha de \n nacimiento:</string>
    <string name="juegos">Juegos</string>
    <string name="retos_ganados">Retos ganados:</string>
    <string name="num_retos_ganados_10">10</string>
    <string name="txt_trivias">Trivias</string>
    <string name="adivinar_objetos">Adivinar objetos</string>
    <string name="juegos_por_ganar">Juegos por ganar</string>
    <string name="title_autenticacion_doble_factor">Habilita la autenticación de doble factores</string>
    <string name="text_autenticar">Pide ayuda a tus padres, se te solicitará un token seguro y aleatorio, lo podrás recuperar con la aplicación Google Authenticator con el teléfono</string>
    <string name="habilitar">Habilitar</string>
    <string name="ajustes">Ajustes</string>
    <string name="text_prueba_descripcion">Mi hijo es un niño adorable, le encanta ayudar a los demas es una personas increible, tiene 7 años.</string>
    <string name="name_prueba">Andres Felipe Pizo Luligo</string>
    <string name="correo_prueba">felpilgamesstudio@gmail.com</string>
    <string name="fecha_Nacimiento_prueba">2022–12–13</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="title_edit_profile">Editar perfil</string>
    <string name="edit_profile_message">Campo para editar perfil</string>
    <string name="edit_profile_cancel">Cancelar</string>
    <string name="edit_profile_decline">Rechazar</string>
    <string name="edit_profile_accept">Aceptar</string>
    <string name="edit_profile_update">Actualizar</string>
    <string name="actualizar_perfil">Actualizar perfil</string>
    <string name="he_olvidado_mi_contrase_a">He olvidado mi contraseña</string>
    <string name="text_olvidar_password">¿Olvidaste tu contraseña? No hay problema 😎. Simplemente con ayuda de tus padres escribe tu correo electrónico y te enviaremos un enlace de restablecimiento de contraseña 😀.</string>
    <string name="enlace_restablecer">Enlace de restablecemiento</string>
    <string name="aceptar">aceptar</string>
    <string name="mision_y_vision">Misión y visión</string>
    <string name="creditos">✔ Créditos</string>
    <string name="ayuda">Ayuda</string>
    <string name="cerrar_sesion">▼ Cerrar sesión</string>
    <string name="settings_go_home">◀</string>
    <string name="todo">TODO</string>
    <string name="cancelar">cancelar</string>
    <string name="game_of_auxilitos">Game of auxilitos</string>
    <string name="title_of_image">Title of image</string>
    <string name="this_is_a_author">This is a author</string>
    <string name="mision">Misión</string>
    <string name="text_mision">Brindar a nuestros niños una educación integral en primeros auxilios preparándolos frente a cualquier dificultad o emergencia, utilizando herramientas didácticas y tecnológicas para desarrollar toda su capacidad, para que sean los héroes del mañana.</string>
    <string name="vision">Visión</string>
    <string name="text_vision">Para el año 2024 los niños estarán preparados para prestar servicios en primeros auxilios y capacitados para poder reaccionar a un evento de emergencia.</string>
    <string name="profile_title">Perfil</string>
    <string name="contenido_de_primero_auxilitos">Contenido de primero auxilitos!!! 😎</string>
    <string name="titulo">Título</string>
    <string name="preview_image_content_description">This ImageButton deals with a preview image to upload</string>
    <string name="go_to_upload">Go to upload</string>
    <string name="subir_contenido">Subir contenido</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="mi_contenido">Mi contenido</string>
    <string name="editar_contenido">Editar contenido</string>
    <string name="delete_contenido">Eliminar contenido</string>
    <string name="imagen_of_doctor">Imagen of doctor</string>
    <string name="cr_ditos">Créditos</string>
    <string name="link1">https://icons8.com/icon/118497/facebook-nuevo</string>
    <string name="link2">https://icons8.com/icon/17949/logo-de-google</string>
    <string name="linkn3">https://icons8.com/icon/888P4ZTyO87z/calendario</string>
    <string name="link4">https://icons8.com/icon/92055/avi%C3%B3n-de-papel</string>
    <string name="link5">https://icons8.com/icon/7KfGv0q2npp0/cancelar</string>
    <string name="link6">https://icons8.com/icon/y1uHVxXxLrdQ/aprobaci%C3%B3n</string>
    <string name="link7">https://www.flaticon.es/iconos-gratis/contenido</string>
    <string name="link8">https://www.flaticon.es/iconos-gratis/sanado</string>
    <string name="link9">https://www.flaticon.es/iconos-gratis/luna</string>
    <string name="link10">https://www.flaticon.es/iconos-gratis/observacion</string>
    <string name="link11">https://www.flaticon.com/free-icons/quiz</string>
    <string name="link12">https://www.flaticon.es/iconos-gratis/adivinar</string>
    <string name="link13">https://www.flaticon.es/iconos-gratis/ninos</string>
    <string name="link14">https://www.flaticon.es/iconos-gratis/nina</string>
    <string name="link15">https://www.flaticon.es/iconos-gratis/jardin-de-infancia</string>
    <string name="link16">https://www.flaticon.es/iconos-gratis/imagen</string>
    <string name="link17">https://www.flaticon.es/stickers-gratis/arte</string>

</resources>