<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro.Login"
    android:orientation="vertical"
    android:background="@drawable/fondo_login"
    android:id="@+id/viewRoot"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:scrollbarThumbVertical="@drawable/scroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="57dp"
                    android:layout_height="78dp"
                    app:srcCompat="@drawable/logo"
                    android:layout_marginTop="35dp"
                    tools:ignore="ContentDescription" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20sp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dynapuff"
                    android:text="@string/bienvenido"
                    android:textColor="#0F71F2"
                    android:textSize="23sp"
                    android:layout_marginTop="2sp"
                    />


                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/tlUsername"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_marginTop="15sp"
                    android:ems="15"
                    android:hint="@string/correo"
                    android:textColor="#0511F2"
                    android:textColorHint="#0511F2"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:hintAnimationEnabled="true"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dynapuff"
                        android:inputType="textEmailAddress"
                        android:textColor="#0511F2"
                        android:textColorHint="#0511F2" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    android:hint="@string/contrasena"
                    app:boxBackgroundMode="outline"
                    android:layout_marginTop="15sp"
                    android:layout_margin="10sp"
                    android:ems="15"
                    android:textColor="#0511F2"
                    android:textColorHint="#0511F2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:passwordToggleEnabled="false"
                    app:endIconTint="@color/teal_200"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/dynapuff"
                        android:textColor="#0511F2"
                        android:textColorHint="#0511F2"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="4dp">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dynapuff"
                        android:text="@string/txt_recordar"
                        android:textColor="#202528" />


                </LinearLayout>



                <Button
                    android:id="@+id/btnlogin"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dynapuff"
                    android:text="@string/iniciar_sesion"
                    android:layout_marginTop="10sp"
                    android:backgroundTint="#0C6EFC"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:contentDescription="@string/iniciar_sesion"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="30sp"
                    >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dynapuff"
                        android:text="@string/txt_cuenta_NULL"
                        android:textColor="#202528"
                        />

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dynapuff"
                        android:text="@string/registrate"
                        android:layout_marginStart="5dp"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp"
                        />

                </LinearLayout>


                <TextView
                    android:id="@+id/olvidarPasswordView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dynapuff"
                    android:text="@string/txt_olvidar_password"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dynapuff"
                    android:text="@string/iniciar_sesion"
                    android:textColor="#202528"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="20sp"
                    android:layout_margin="10dp">


                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/facebook"
                        android:contentDescription="@string/facebook"
                        android:layout_margin="5dp"/>

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/google"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/google" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>