<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro.OlvidarPassword"
    android:orientation="vertical"
    android:background="@drawable/olvidar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:scrollbarThumbVertical="@drawable/scroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/roundedlayout_semi_transparent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    app:srcCompat="@drawable/logo"
                    android:layout_marginTop="35dp"
                    tools:ignore="ContentDescription"
                    android:layout_margin="20dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20sp"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dynapuff"
                    android:text="@string/he_olvidado_mi_contrase_a"
                    android:textColor="#0F71F2"
                    android:textSize="23sp"
                    android:layout_marginTop="2sp"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_olvidar_password"
                    android:gravity="center"
                    android:textSize="20sp"
                    />


                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/tlUsername"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_marginTop="15sp"
                    android:ems="15"
                    android:hint="@string/correo"
                    android:textColor="#0511F2"
                    android:textColorHint="#0511F2"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:hintAnimationEnabled="true"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dynapuff"
                        android:inputType="textEmailAddress"
                        android:textColor="#0511F2"
                        android:textColorHint="#0511F2" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    >

                    <Button
                        android:id="@+id/btnRegresarLogin"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dynapuff"
                        android:text="@string/regresar"
                        android:layout_marginTop="10sp"
                        android:backgroundTint="@color/red"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:layout_margin="8dp"
                        />

                    <Button
                        android:id="@+id/btnRestablecerPassword"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dynapuff"
                        android:text="@string/enlace_restablecer"
                        android:layout_marginTop="10sp"
                        android:backgroundTint="@color/green"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:layout_margin="8dp"
                        />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>